[gd_scene load_steps=5 format=3 uid="uid://d1djvx34lb23g"]

[ext_resource type="Script" path="res://assets/tools/green button/green_button.gd" id="1_du1p6"]
[ext_resource type="Texture2D" uid="uid://ct780no5iqfrw" path="res://assets/tools/green button/button.png" id="1_uwuwv"]
[ext_resource type="Texture2D" uid="uid://cif3ggjjavt0r" path="res://assets/tools/green button/press.png" id="2_1d823"]
[ext_resource type="AudioStream" uid="uid://dv1qra3emvgg4" path="res://assets/tools/green button/273143__zvinbergsa__button-press - Copy.wav" id="4_4u5fg"]

[node name="GreenButton" type="TextureButton"]
z_index = 10
offset_right = 188.0
offset_bottom = 163.0
texture_normal = ExtResource("1_uwuwv")
texture_pressed = ExtResource("2_1d823")
script = ExtResource("1_du1p6")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -12.0
offset_top = -18.0
offset_right = 189.0
offset_bottom = 35.0
text = "allow"
horizontal_alignment = 1

[node name="GreenButton_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_4u5fg")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
